[package]
name = "grideye_terminal"
version = "0.1.0"
edition = "2021"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]

[dependencies]
rumqttc = "0.10.0"
toml-cfg = "0.1"
log = "0.4"
env_logger = "0.10.0"
chrono = "0.4.23"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]